@@ -25,6 +25,7 @@
 typedef uint32 Checksum;
 
 
+#include "netplay.h"
 #include "crc.h"
 
 #include "element.h"
